changed arrows and bar to black

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ html, body {
 
   .hands {
     height: 100px;
-    background-color: #b8937a;
+    background-color: #000000;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -107,17 +107,17 @@ html, body {
   }
 
   .active-left {
-    border-right: 15px solid #c1f80a;
+    border-right: 15px solid #000000;
   }
 
   .active-up {
-    border-bottom: 15px solid #c1f80a;
+    border-bottom: 15px solid #000000;
   }
 
   .active-right {
-    border-left: 15px solid #c1f80a;
+    border-left: 15px solid #000000;
   }
 
   .active-down {
-    border-top: 15px solid #c1f80a;
+    border-top: 15px solid #000000;
   }
